@@ -1,5 +1,6 @@
 v0.3.3~dev
 - Fix persistent notification being too persistent
+- Add settings to select artwork types to automatically download
 
 v0.3.2 (2016-02-09)
 - better handle rapid fire library updates
